# ConSense_Asia-CCS_2026

./: README.md
consense/launch/: consense.launch
consense/src/: anomaly_detector.py
consense_ros/: CMakeLists.txt
consense_ros/config/: params.yaml  sensors.yaml
consense_ros/consense_ros/: CMakeLists.txt  packages.xml
consense_ros/consense_ros/launch/: consense.launch
consense_ros/consense_ros/src/modules/: __inint__.py  context_extractor.py
consense_ros/consense_ros/src/scripts/: attack_injector.py  plot_results.py
consense_ros/msg/: ConSenseStatus.msg
consense_ros/src/: anomaly_detector.py  residual_corrector.py  weight_determinator.py
consense_ros/src/test/: test_core_logic.py
